# whipple

./: .buildinfo  .gitignore  LICENSE  README.md  analysis.html  analysis.ipynb  code_appendix.html  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy-book.yml
_modules/: index.html
_modules/statwise/: cleaning.html  loading.html  modeling.html  preparation.html  selection.html
_sources/api/: cleaning.md  loading.md  preparation.md  selection.md
api/: cleaning.html  index.html  loading.html  modeling.html  preparation.html  selection.html
book/: _config.yml  _toc.yml  analysis.ipynb  code_appendix.md  intro.md
book/_build/.doctrees/: analysis 2.doctree  analysis.doctree  code_appendix 2.doctree  environment 2.pickle  environment.pickle  intro 2.doctree  intro.doctree
book/_build/.doctrees/api/: index.doctree
book/_build/.jupyter_cache/: global.db
book/_build/html/: .buildinfo  analysis.html  code_appendix.html  genindex.html  intro.html  objects.inv  search.html  searchindex.js
book/_build/jupyter_execute/: analysis 2.ipynb  analysis.ipynb
book/api/: cleaning.md
book/statwise/: __init__.py  loading.py  preparation.py  selection.py
data/: WHIPPLE_DEIDENTIFIED.csv  column_metadata.json
docs/: .buildinfo  analysis.html  genindex.html  intro.html  search.html  searchindex.js
docs/_sources/: analysis.ipynb
docs/html/: code_appendix.html  intro.html  search.html  searchindex.js
statwise/: __init__.py  cleaning.py  loading.py  modeling.py  preparation.py  results.py  selection.py
(+15 files in other folders)
